# grove

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/rulesets/: master-protection.json
docs/plans/: 2026-01-10-filetree-design.md  2026-01-10-filetree-implementation.md  2026-01-11-live-monitoring-preview.md
src/: app.rs  icons.rs  main.rs  preview.rs  watcher.rs
src/fs/: entry.rs  mod.rs  tree.rs
src/ui/: mod.rs  preview.rs  tree.rs
