[package]
name = "grove-tui"
version = "0.1.0"
description = "A fast, minimal terminal file explorer with Vim-style navigation"
authors = ["Jose Miguel Hernandez"]
repository = "https://github.com/ixjosemi/grove"
license = "MIT"
readme = "README.md"
keywords = ["terminal", "file-manager", "tui", "cli", "vim"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ignore = "0.4"
dirs = "5"
anyhow = "1"
notify = "8.2"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
